tests/integration/features/source_code_traceability/_config/_validation/01_path_to_source_files_does_not_exist/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail
CHECK: error: config: source_root_path: Provided path does not exist: DOES_NOT_EXIST/.
